--- a/src/components/Burger/Burger.module.css
+++ b/src/components/Burger/Burger.module.css
@@ -1,7 +1,7 @@
 .Burger {
   width: 60vw;
   margin: auto;
-  height: 35vh;
+  height: 20rem;
   overflow: scroll;
   text-align: center;
   font-weight: bold;
@@ -10,21 +10,21 @@
 
 @media (min-width: 1000px) and (min-height: 401px) {
   .Burger {
-    width: 30vw;
-    height: 60vh;
+    width: 15rem;
+    height: 20rem;
   }
 }
 
 @media (min-width: 500px) and (min-height: 401px) {
   .Burger {
-    width: 50vw;
-    height: 35vh;
+    width: 15rem;
+    height: 20rem;
   }
 }
 
 @media (min-width: 500px) and (max-height: 400px) {
   .Burger {
-    width: 20vw;
-    height: 35vh;
+    width: 15rem;
+    height: 20rem;
   }
 }
