--- a/src/components/UI/Button/Button.module.css
+++ b/src/components/UI/Button/Button.module.css
@@ -1,11 +1,24 @@
 .Button {
+  background-color: transparent;
+  border: none;
+  color: white;
+  outline: none;
+  cursor: pointer;
+  font: inherit;
+  padding: 10px;
+  margin: 10px;
+  font-weight: bold;
+}
+
+.Button:first-of-type {
+  margin-left: 0;
+  padding-left: 0;
 }
 
 .Success {
-  background-color: red;
-  color: white;
+  color: #5c9210;
 }
 
 .Danger {
-  background-color: darkgreen;
+  color: #944317;
 }
